# agent-inventory

./: .env.example  .gitignore  ADK_WEB_UI.md  DOCKER.md  Dockerfile  EVAL_GUIDE.md  MYSQL_SETUP.md  README.md  architecture.md  docker-compose.yml  pyproject.toml  test_agent.py
inventory_system/: agent.py  conversation_logger.py  database.py  init_db.py  main.py  tools.py
inventory_system/eval_sets/: basic_inventory_tests.json
